syntax = "proto3";

import "google/protobuf/timestamp.proto";

package Communication;

service Messaging 
{
    rpc CreateStreaming (stream RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage
{
    string clientId = 1;
    string messageId = 2;
    MessageType type = 3;
    google.protobuf.Timestamp time = 4;
    MessageStatus status = 5;
    bytes payload = 6;
    ResponseType response = 7;
}

message ResponseMessage
{
    string clientId = 1;
    string messageId = 2;
    MessageType type = 3;
    google.protobuf.Timestamp time = 4;
    MessageStatus status = 5;
    string payload = 6;
}

enum MessageType
{
    MESSAGETYPE_UNDEFINED = 0;
    MESSAGETYPE_ORDINARY = 1;
    MESSAGETYPE_IMPORTANT = 2;
}

enum MessageStatus
{
    MESSAGESTATUS_UNDEFINED = 0;
    MESSAGESTATUS_CREATED = 1;
    MESSAGESTATUS_SENT = 2;
    MESSAGESTATUS_RECEIVED = 3;
    MESSAGESTATUS_PROCESSED = 4; 
    MESSAGESTATUS_ERROR = 5;
}

enum ResponseType
{
	RESPONSETYPE_UNDEFINED = 0;
	RESPONSETYPE_REQUIRED = 1;
	RESPONSETYPE_NOT_REQUIRED = 2;
}
